fix collapse behavior of hamburger menu

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -28,7 +28,7 @@ img{
   color: #F93943 !important;
 }
 .navbar-brand{
-  font-size: 1.85rem;
+  font-size: 1.9rem;
   font-weight: 900;
   text-transform: uppercase;
 }
